# rust_emu

./: .gitignore  Cargo.toml  LICENSE  README.md  README_ja.md  check_mapper  check_mapper.rs  copilot-instructions.md  index.html  ppudiag.txt  ppudiag2.txt  ppudiag3.txt  ppudiag4.txt
.github/workflows/: deploy-pages.yml  game-release.yml  release.yml
game_examples/: Makefile  README.md  README_ja.md  docker-compose.yml
game_examples/docker/: Dockerfile
game_examples/projects/breakout/: Makefile  README.md
game_examples/projects/breakout/src/: main.s
game_examples/projects/hello_nes/: Makefile  README.md  nes.cfg
game_examples/projects/hello_nes/src/: main.s
game_examples/projects/shooting/: Makefile  nes.cfg
game_examples/projects/shooting/src/: main.s
src/: apu.rs  bus.rs  cartridge.rs  cpu.rs  joypad.rs  lib.rs  main.rs  opcodes.rs  ppu.rs
